# smashing

./: .gitignore  README.md  UPDATING.md  _build.py  beet.yaml  pack.mcmeta  pyproject.toml
.github/workflows/: main.yml
backport_81/data/rc_smashing/dialog/: about.json
backport_81/data/rc_smashing/function/: slow_clock.mcfunction
data/load/tags/function/: load.json
data/minecraft/tags/function/: tick.json
data/rc_smashing/dialog/: about.json
data/rc_smashing/function/: check_origin.mcfunction  init.mcfunction  slow_clock.mcfunction  smash_block.mcfunction  smash_waterlogged_block.mcfunction  tick.mcfunction
data/rc_smashing/function/arrow/: attempt_smash.mcfunction  check_block.mcfunction  reapply_data.mcfunction  store_data.mcfunction
data/rc_smashing/function/trident/: attempt_smash.mcfunction  check_block.mcfunction
data/rc_smashing/predicate/: smashing_speed.json
data/rc_smashing/tags/block/: arrow_smashable.json  glass_panes.json  trident_smashable.json
data/rc_smashing/tags/entity_type/: smasher.json
data/smithed/tags/dialog/: data_packs.json
plugins/: output.py  write_mcmeta.py
src/mod_files/: fabric.mod.json  quilt.mod.json
src/modules/: dialog.bolt  load.bolt  smashing.bolt
