[project]
dependencies = [
    "beet>=0.115.0",
    "bolt>=0.50.1",
    "bolt-native-macros>=0.5.1",
    "jinja2>=3.1.6",
    "mecha>=0.103.0",
    "pygithub>=2.9.1",
]
description = "The Smashing Datapack Github Repo"
name = "Smashing"
readme = "README.md"
requires-python = ">=3.14"
version = "0.0.0"
